--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 :root {
   --blue: #04aadd;
+  --blue-dark: #00303f;
   --green: #20d420;
+  --orange: sandybrown;
+  --orange-dark: #80420d;
 
+  --primary: var(--blue);
+  --primary-dark: var(--blue-dark);
+  --text-color: #1b1b1b;
   --base-font: 'Heebo', sans-serif;
+  --bg-primary: white;
+  --bg-secondary: whitesmoke;
 }
 
 * {
@@ -12,10 +20,11 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: var(--bg-secondary);
   font-family: var(--base-font);
   font-weight: 300;
-  color: #1b1b1b;
+  color: var(--text-color);
+  transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
 }
 
 main {
@@ -23,10 +32,11 @@ main {
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - var(--navbar-height));
+  padding: 20px 0;
 }
 
 a {
-  color: var(--blue);
+  color: var(--primary);
 }
 
 :root {
@@ -35,7 +45,7 @@ a {
 
 .navbar {
   height: var(--navbar-height);
-  background-color: white;
+  background-color: var(--bg-primary);
   position: relative;
 }
 
@@ -52,16 +62,6 @@ a {
   text-decoration: none;
 }
 
-@media screen and (max-width: 600px) {
-  .navbar-logo {font-size: 38px;}
-}
-
-.sm-view {display: none;}
-
-@media screen and (max-width: 600px) {
-  .sm-view {display: inline-block}
-  .lg-view {display: none}
-}
 
 
 
@@ -105,26 +105,28 @@ label {
 }
 
 input {
-  padding: 10px;
+  background-color: transparent;
   border-radius: 5px;
   border: none;
   box-shadow: inset 0 0 2.5px grey;
-  width: 100%;
-  font-size: 18px;
+  color: var(--text-color);
   font-family: var(--base-font);
+  font-size: 18px;
   outline: none;
-  transition: box-shadow .2s ease;
+  padding: 10px;
+  transition: box-shadow .2s ease, background-color .2s ease;
+  width: 100%;
   -webkit-tap-highlight-color: transparent;
 }
 
 input:hover,
 input:focus,
 input:focus-visible {
-  box-shadow: inset 0 0 2.5px var(--blue);
+  box-shadow: inset 0 0 2.5px var(--primary);
 }
 
 .calculator {
-  background-color: white;
+  background-color: var(--bg-primary);
   max-width: 600px;
   width: 100%;
   box-shadow: 0 2.5px 10px darkgrey;
@@ -145,13 +147,56 @@ input:focus-visible {
 
 .text-green {color: var(--green)}
 .text-blue {color: var(--blue)}
+.text-primary {color: var(--primary)}
 
 footer {
-  background-color: white;
+  background-color: var(--bg-primary);
   display: grid;
   justify-content: center;
   align-items: center;
   align-content: center;
   height: 40px;
   font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar-logo {font-size: 38px;}
+  :root {--navbar-height: 60px}
+  input {padding: 8px}
+  .calculator-footer {font-size: 34px;}
+}
+
+.sm-view {display: none;}
+
+@media screen and (max-width: 600px) {
+  .sm-view {display: inline-block}
+  .lg-view {display: none}
+}
+
+.theme-dark {
+  --bg-primary: #242424;
+  --bg-secondary: #141414;
+  --text-color: white;
+  --primary: var(--orange);
+  --primary-dark: var(--orange-dark);
+}
+
+.theme-dark .calculator {box-shadow: 0 2.5px 5px black}
+.theme-dark input {box-shadow: inset 0 0 2.5px black}
+.theme-dark input:hover {
+  background-color: #1d1d1d;
+  box-shadow: inset 0 0 2.5px var(--primary);
+}
+.theme-dark hr {background-color: #7e7e7e}
+.theme-dark .calculator-body {border-bottom: .5px solid #7e7e7e}
+
+.theme-icon {
+  color: skyblue;
+  font-size: 28px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.theme-dark .theme-icon {
+  color: sandybrown;
 }
