--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   font-family: var(--base-font);
   font-weight: 300;
   color: var(--text-color);
-  transition: color .2s ease, background-color .2s ease, box-shadow .2s ease;
+  transition: color .2s ease, background-color .2s ease, box-shadow .2s ease, color .2s ease;
 }
 
 main {
@@ -47,6 +47,7 @@ a {
   height: var(--navbar-height);
   background-color: var(--bg-primary);
   position: relative;
+  transition: background-color .2s ease;
 }
 
 .navbar-logo {
@@ -114,7 +115,7 @@ input {
   font-size: 18px;
   outline: none;
   padding: 10px;
-  transition: box-shadow .2s ease, background-color .2s ease;
+  transition: box-shadow .2s ease, background-color .2s ease, color .2s ease;
   width: 100%;
   -webkit-tap-highlight-color: transparent;
 }
@@ -133,6 +134,7 @@ input:focus-visible {
   border-radius: 10px;
   overflow: hidden;
   margin: 0 auto;
+  transition: background-color .2s ease, box-shadow .2s ease;
 }
 
 .calculator-body {
@@ -161,6 +163,7 @@ footer {
   align-content: center;
   height: var(--footer-height);
   font-size: 20px;
+  transition: background-color .2s ease;
 }
 
 @media screen and (max-width: 600px) {
